# vkPortfolio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: credits.txt
assets/Alternative/: README.txt
dep/Gateware/: Gateware.h  README.md
dep/consolecolors/: README.md  concolors.c  concolors.h
dep/imgui/: imgui_impl_vulkan.cpp
dep/sse_math/: ssemath.h  ssemath_base.hpp  ssemath_mat4f.hpp  ssemath_vec4f.hpp
scripts/: build.bat  build.command  build.sh
src/: App.cpp  App.h  CMakeLists.txt  VkGlobals.cpp  VkGlobals.h  main.cpp  pch.h
src/Asset/: Descriptors.cpp  Descriptors.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/ImGui/: ImGuiGlobals.cpp  ImGuiGlobals.h  compile.bat  imgui.frag  imgui.vert  imgui.vert.spv  imgui_impl_gateware.cpp  imgui_impl_gateware.h
src/Scenes/: Scenes.cpp  Scenes.h
src/Scenes/A_SceneMenu/: SceneMenu.cpp  SceneMenu.h
src/Scenes/A_StartScene/: StartScene.cpp  StartScene.h  imgui.frag.spv
src/Scenes/A_Texture/: TextureScene.cpp  TextureScene.h  compile.bat  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/Scenes/_SceneMenu/: SceneMenu.cpp  SceneMenu.h
src/Surface/: App.cpp  VkCore.cpp  VkCore.h  VkDebug.cpp  imgui_impl_gateware.cpp
src/Vulkan/: VkCore.cpp  VkDebug.cpp  VkGlobals.cpp  VkGlobals.h
